--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,18 @@
   }
   
   .scrollbar-thin::-webkit-scrollbar-track {
-    background: transparent;
+    background-color: #222;
+    width: 6px;
+    
   }
   
   .scrollbar-thin::-webkit-scrollbar-thumb {
-    background-color: #93C5FD;
+    background-color: #314151;
     border-radius: 3px;
   }
   
   .scrollbar-thin::-webkit-scrollbar-thumb:hover {
-    background-color: #60A5FA;
+    background-color: #4B5563;
   }
   
   .hide-scrollbar::-webkit-scrollbar {
